improved pre-processing and began with processing (splitting, padding and masking functions)

--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset import Dataset"
+    "from data_preprocessing import Dataset"
    ]
   },
   {
@@ -53,79 +53,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>dense_movie_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>user_id</th>\n",
-       "      <th></th>\n",
+       "      <th>dense_movie_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>[2839, 906, 1115, 1492, 1572, 3029, 2478, 1054...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>[1045, 1057, 1138, 2611, 1072, 301, 1041, 2528...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>[2528, 1697, 1690, 1111, 1213, 1212, 3269, 563...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>[972, 457, 3084, 1045, 1219, 247, 1756, 1048, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>[809, 798, 1095, 2528, 2661, 2444, 2577, 2055,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6036</th>\n",
+       "      <th>6029</th>\n",
+       "      <td>6036</td>\n",
        "      <td>[1492, 1614, 2528, 2661, 2385, 213, 968, 2852,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6037</th>\n",
+       "      <th>6030</th>\n",
+       "      <td>6037</td>\n",
        "      <td>[1756, 1112, 760, 2804, 538, 1068, 802, 813, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6038</th>\n",
+       "      <th>6031</th>\n",
+       "      <td>6038</td>\n",
        "      <td>[1057, 1872, 338, 954, 3160, 1005, 2746, 221, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6039</th>\n",
+       "      <th>6032</th>\n",
+       "      <td>6039</td>\n",
        "      <td>[108, 269, 1793, 820, 2684, 2746, 2478, 845, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6040</th>\n",
+       "      <th>6033</th>\n",
+       "      <td>6040</td>\n",
        "      <td>[760, 2084, 565, 1690, 1747, 204, 549, 3118, 2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6034 rows × 1 columns</p>\n",
+       "<p>6034 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            dense_movie_id\n",
-       "user_id                                                   \n",
-       "1        [2839, 906, 1115, 1492, 1572, 3029, 2478, 1054...\n",
-       "2        [1045, 1057, 1138, 2611, 1072, 301, 1041, 2528...\n",
-       "3        [2528, 1697, 1690, 1111, 1213, 1212, 3269, 563...\n",
-       "4        [972, 457, 3084, 1045, 1219, 247, 1756, 1048, ...\n",
-       "5        [809, 798, 1095, 2528, 2661, 2444, 2577, 2055,...\n",
-       "...                                                    ...\n",
-       "6036     [1492, 1614, 2528, 2661, 2385, 213, 968, 2852,...\n",
-       "6037     [1756, 1112, 760, 2804, 538, 1068, 802, 813, 1...\n",
-       "6038     [1057, 1872, 338, 954, 3160, 1005, 2746, 221, ...\n",
-       "6039     [108, 269, 1793, 820, 2684, 2746, 2478, 845, 1...\n",
-       "6040     [760, 2084, 565, 1690, 1747, 204, 549, 3118, 2...\n",
+       "      user_id                                     dense_movie_id\n",
+       "0           1  [2839, 906, 1115, 1492, 1572, 3029, 2478, 1054...\n",
+       "1           2  [1045, 1057, 1138, 2611, 1072, 301, 1041, 2528...\n",
+       "2           3  [2528, 1697, 1690, 1111, 1213, 1212, 3269, 563...\n",
+       "3           4  [972, 457, 3084, 1045, 1219, 247, 1756, 1048, ...\n",
+       "4           5  [809, 798, 1095, 2528, 2661, 2444, 2577, 2055,...\n",
+       "...       ...                                                ...\n",
+       "6029     6036  [1492, 1614, 2528, 2661, 2385, 213, 968, 2852,...\n",
+       "6030     6037  [1756, 1112, 760, 2804, 538, 1068, 802, 813, 1...\n",
+       "6031     6038  [1057, 1872, 338, 954, 3160, 1005, 2746, 221, ...\n",
+       "6032     6039  [108, 269, 1793, 820, 2684, 2746, 2478, 845, 1...\n",
+       "6033     6040  [760, 2084, 565, 1690, 1747, 204, 549, 3118, 2...\n",
        "\n",
-       "[6034 rows x 1 columns]"
+       "[6034 rows x 2 columns]"
       ]
      },
      "execution_count": 4,
@@ -135,9 +142,34 @@
    ],
    "source": [
     "ratings\n",
-    "# these are now individual ratings above 4,\n",
+    "# these are now individual user-ratings above 4,\n",
     "# for a movie id that is dense and above 2 (we keep 0 and 1 for padding and masking)\n",
-    "# and ordered by timestamp (grouped by users)"
+    "# and ordered by timestamp (grouped by users)\n",
+    "# users with less than 5 interactions have been removed too."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_processing import DataProcessing\n",
+    "\n",
+    "dataprocessing = DataProcessing()\n",
+    "\n",
+    "train_df, val_df, test_df = dataprocessing.split_user_sequences()\n",
+    "#list(train_df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_padded = dataprocessing.pad_user_sequences(train_df)\n",
+    "#list(train_df_padded.iloc[0])"
    ]
   },
   {
