fix data loader and add tests

--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_preprocessing import Dataset"
+    "from data_preprocessing import DataPreprocessing"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Dataset(path=\"data/\")"
+    "data_preprocessor = DataPreprocessing(path=\"data/\")"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = dataset.ratings"
+    "ratings = data_preprocessor.ratings"
    ]
   },
   {
@@ -150,39 +150,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from data_processing import DataProcessing\n",
     "\n",
-    "dataprocessing = DataProcessing()\n",
-    "\n",
-    "train_df, val_df, test_df = dataprocessing.split_user_sequences()\n",
-    "#list(train_df.iloc[0])"
+    "dataprocessing = DataProcessing()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Count of training items: 6034\n",
+      "Count of validation items: 6034\n",
+      "Count of testing items: 6034\n",
+      "(train) Length is padded to: 20\n",
+      "(val) Length is padded to: 20\n",
+      "(test) Length is padded to: 20\n",
+      "first train sequence: [577, 2369, 1690, 1756, 2763, 828, 919, 1691, 912, 141, 1746, 972, 1132, 2471, 2436, 1091, 2586, 508, 2772, 2465] for user 1\n",
+      "first val sequence: [1691, 912, 141, 1746, 972, 1132, 2471, 2436, 1091, 2586, 508, 2772, 2465, 913, 566, 2098, 1347, 504, 2, 561] for user 1\n",
+      "first test sequence: [2436, 1091, 2586, 508, 2772, 2465, 913, 566, 2098, 1347, 504, 2, 561, 567, 706, 2055, 1998, 1637, 1363, 49] for user 1\n",
+      "full sequence: [2839, 906, 1115, 1492, 1572, 3029, 2478, 1054, 1041, 247, 809, 577, 2369, 1690, 1756, 2763, 828, 919, 1691, 912, 141, 1746, 972, 1132, 2471, 2436, 1091, 2586, 508, 2772, 2465, 913, 566, 2098, 1347, 504, 2, 561, 567, 706, 2055, 1998, 1637, 1363, 49]\n",
+      "    (so 6.75 extra items are in validation split, which is rounded up)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"\n",
+    "Count of training items: {len(dataprocessing.train_df)}\n",
+    "Count of validation items: {len(dataprocessing.val_df)}\n",
+    "Count of testing items: {len(dataprocessing.test_df)}\n",
+    "(train) Length is padded to: {len(max(dataprocessing.train_df[\"input_seq\"], key=lambda x: len(x)))}\n",
+    "(val) Length is padded to: {len(max(dataprocessing.val_df[\"input_seq\"], key=lambda x: len(x)))}\n",
+    "(test) Length is padded to: {len(max(dataprocessing.test_df[\"input_seq\"], key=lambda x: len(x)))}\n",
+    "first train sequence: {dataprocessing.train_df[\"input_seq\"][0]} for user {dataprocessing.train_df[\"user_id\"][0]}\n",
+    "first val sequence: {dataprocessing.val_df[\"input_seq\"][0]} for user {dataprocessing.val_df[\"user_id\"][0]}\n",
+    "first test sequence: {dataprocessing.test_df[\"input_seq\"][0]} for user {dataprocessing.test_df[\"user_id\"][0]}\n",
+    "full sequence: {ratings[\"dense_movie_id\"][0]}\n",
+    "    (so {0.15 * len(eval(ratings[\"dense_movie_id\"][0]))} extra items are in validation split, which is rounded up)\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_padded = dataprocessing.pad_user_sequences(train_df)\n",
-    "#list(train_df_padded.iloc[0])"
+    "train_loader, val_loader, test_loader = dataprocessing.get_dataloaders(batch_size=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'user_id': tensor([5983]), 'input_ids': tensor([[   0,    0,    0,    0, 1697,  107, 1207, 2981, 1043,  972, 3087,    1,\n",
+      "         1085, 1115,    1, 1208, 1047,  457, 1866, 1046]]), 'attention_mask': tensor([[0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'labels': tensor([[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,  814,\n",
+      "         -100, -100, 2225, -100, -100, -100, -100, -100]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in train_loader:\n",
+    "    print(batch)\n",
+    "    break"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "rs",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
