Fix: use an unused masking token

--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "from data_processing import DataProcessing\n",
     "\n",
-    "dataprocessing = DataProcessing()\n"
+    "dataprocessing = DataProcessing(preprocessor=data_preprocessor)\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': tensor([5983]), 'input_ids': tensor([[   0,    0,    0,    0, 1697,  107, 1207, 2981, 1043,  972, 3087,    1,\n",
-      "         1085, 1115,    1, 1208, 1047,  457, 1866, 1046]]), 'attention_mask': tensor([[0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'labels': tensor([[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,  814,\n",
-      "         -100, -100, 2225, -100, -100, -100, -100, -100]])}\n"
+      "{'user_id': tensor([447]), 'input_ids': tensor([[1691, 2770, 1072, 1075, 3403, 1686, 1697,  971, 1033, 1144, 1138, 1794,\n",
+      "           -1, 1077,   -1,  965,   -1, 3044, 2587, 3166]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'labels': tensor([[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
+      "         1007, -100, 2637, -100, 1748, -100, -100, -100]])}\n"
      ]
     }
    ],
