WIP! - Running BERT model

--- a/data_test.ipynb
+++ b/data_test.ipynb
@@ -141,22 +141,39 @@
     }
    ],
    "source": [
-    "ratings\n",
-    "# these are now individual user-ratings above 4,\n",
-    "# for a movie id that is dense and above 2 (we keep 0 and 1 for padding and masking)\n",
-    "# and ordered by timestamp (grouped by users)\n",
-    "# users with less than 5 interactions have been removed too."
+    "ratings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3534\n",
+      "2\n",
+      "6040\n"
+     ]
+    }
+   ],
    "source": [
     "from data_processing import DataProcessing\n",
     "\n",
-    "dataprocessing = DataProcessing(preprocessor=data_preprocessor)\n"
+    "dataprocessing = DataProcessing(preprocessor=data_preprocessor)\n",
+    "\n",
+    "unique_movie_ids = set()\n",
+    "\n",
+    "for row in dataprocessing.ratings[\"dense_movie_id\"]:\n",
+    "    row = eval(row)\n",
+    "    unique_movie_ids.update(row)\n",
+    "    \n",
+    "print(max(unique_movie_ids))\n",
+    "print(min(unique_movie_ids))\n",
+    "print(max(dataprocessing.ratings[\"user_id\"]))\n",
+    "\n"
    ]
   },
   {
@@ -169,6 +186,7 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Count of tokens: 3535\n",
       "Count of training items: 6034\n",
       "Count of validation items: 6034\n",
       "Count of testing items: 6034\n",
@@ -186,6 +204,7 @@
    ],
    "source": [
     "print(f\"\"\"\n",
+    "Count of tokens: {dataprocessing.get_token_count()}\n",
     "Count of training items: {len(dataprocessing.train_df)}\n",
     "Count of validation items: {len(dataprocessing.val_df)}\n",
     "Count of testing items: {len(dataprocessing.test_df)}\n",
@@ -218,9 +237,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': tensor([447]), 'input_ids': tensor([[1691, 2770, 1072, 1075, 3403, 1686, 1697,  971, 1033, 1144, 1138, 1794,\n",
-      "           -1, 1077,   -1,  965,   -1, 3044, 2587, 3166]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'labels': tensor([[-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-      "         1007, -100, 2637, -100, 1748, -100, -100, -100]])}\n"
+      "{'user_id': tensor([4224]), 'input_ids': tensor([[  12,  152,  575, 2586, 2225, 2745,   -1,  339, 1380, 1900,   -1,   -1,\n",
+      "         1930, 1828, 2597, 3319, 1813,  792, 2350,  623]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]), 'labels': tensor([[-100, -100, -100, -100, -100, -100, 1225, -100, -100, -100,  249,  248,\n",
+      "         -100, -100, -100, -100, -100, -100, -100, -100]])}\n"
      ]
     }
    ],
