add positional embeddings

--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "836ff49b",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s2357682 pts/0        2025-04-30 12:50 (132.229.92.101)\n",
-      "Wed Apr 30 12:57:33 2025       \n",
+      "Thu May  1 11:55:35 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.120                Driver Version: 550.120        CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -20,7 +19,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4060        Off |   00000000:01:00.0 Off |                  N/A |\n",
-      "| 53%   69C    P2             N/A /  115W |     438MiB /   8188MiB |     84%      Default |\n",
+      "| 32%   35C    P8             N/A /  115W |      71MiB /   8188MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -29,8 +28,8 @@
       "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A      2120      G   /usr/lib/xorg/Xorg                              4MiB |\n",
-      "|    0   N/A  N/A    767411      C   python                                        424MiB |\n",
+      "|    0   N/A  N/A   1290312      G   /usr/lib/xorg/Xorg                             56MiB |\n",
+      "|    0   N/A  N/A   1290347      G   /usr/bin/gnome-shell                            9MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a672dc80",
    "metadata": {},
    "outputs": [
@@ -58,7 +57,7 @@
     "import torch\n",
     "from data_preprocessing import DataPreprocessing\n",
     "from data_processing import DataParameters, DataProcessing\n",
-    "from model import Bert4RecTrainingParams, train\n",
+    "from training import train, Bert4RecTrainingParams\n",
     "\n",
     "print(torch.cuda.is_available())"
    ]
@@ -73,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cuda\n"
+      "Max sequence length: 1435\n"
      ]
     },
     {
@@ -81,53 +80,21 @@
      "output_type": "stream",
      "text": [
       "/vol/home/s2357682/.conda/envs/rs/lib/python3.9/site-packages/torch/optim/lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
-      "  warnings.warn(\n",
-      "Epoch 1/50: 100%|██████████| 12121/12121 [16:27<00:00, 12.27it/s, train_loss=7.19]\n",
-      "Validation: 100%|██████████| 189/189 [00:03<00:00, 54.44it/s]\n"
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50 - Train Loss: 7.1930, Val Loss: 7.2971\n"
+      "Using device cuda\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/50: 100%|██████████| 12121/12121 [16:27<00:00, 12.27it/s, train_loss=7.17]\n",
-      "Validation: 100%|██████████| 189/189 [00:03<00:00, 54.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/50 - Train Loss: 7.1659, Val Loss: 7.2888\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/50: 100%|██████████| 12121/12121 [16:26<00:00, 12.28it/s, train_loss=7.16]\n",
-      "Validation: 100%|██████████| 189/189 [00:03<00:00, 54.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/50 - Train Loss: 7.1604, Val Loss: 7.2878\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/50:  53%|█████▎    | 6444/12121 [08:42<07:41, 12.31it/s, train_loss=7.16]"
+      "Epoch 1/50:  87%|████████▋ | 2640/3031 [01:31<00:13, 28.63it/s, train_loss=7.06]"
      ]
     }
    ],
@@ -141,15 +108,17 @@
     ")\n",
     "data_preprocessor = DataPreprocessing(path=\"data/\")\n",
     "data_processor = DataProcessing(preprocessor=data_preprocessor, params=data_params)\n",
+    "max_sequence_length = data_processor.get_max_sequence_length()\n",
+    "print(f\"Max sequence length: {max_sequence_length}\")\n",
     "\n",
     "training_params = Bert4RecTrainingParams(\n",
     "    vocab_size=data_processor.get_token_count(),\n",
-    "    heads=12, # same as BERT4Rec paper\n",
-    "    num_hidden_layers=12, # same as BERT4Rec paper\n",
-    "    hidden_layer_size=768, # same as BERT4Rec paper\n",
-    "    num_pos=SEQUENCE_LENGTH,\n",
+    "    heads=4,\n",
+    "    num_hidden_layers=8,\n",
+    "    hidden_layer_size=128,\n",
+    "    num_pos=max_sequence_length,\n",
     "    epochs=50,\n",
-    "    batch_size=32,\n",
+    "    batch_size=128,\n",
     "    learning_rate=1e-3,\n",
     ")\n",
     "\n",
