--- a/training.ipynb
+++ b/training.ipynb
@@ -141,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "rs",
    "language": "python",
    "name": "python3"
   },
