ran with new evaluation

--- a/result_generation.ipynb
+++ b/result_generation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9f7d9169",
    "metadata": {},
    "outputs": [
@@ -34,9 +34,9 @@
       "\\toprule\n",
       "hidden\\_layer\\_size & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
       "\\midrule\n",
-      "64 & 0.052596 & 0.152304 & 29 \\\\\n",
-      "128 & 0.051736 & 0.149652 & 30 \\\\\n",
-      "256 & 0.052069 & 0.152635 & 29 \\\\\n",
+      "64 & 0.054833 & 0.065294 & 48 \\\\\n",
+      "128 & 0.055468 & 0.065808 & 34 \\\\\n",
+      "256 & 0.052526 & 0.063628 & 35 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
@@ -44,9 +44,9 @@
       "\\toprule\n",
       "mask\\_probability & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
       "\\midrule\n",
-      "0.150000 & 0.053268 & 0.151309 & 31 \\\\\n",
-      "0.200000 & 0.051488 & 0.149321 & 29 \\\\\n",
-      "0.400000 & 0.055613 & 0.162579 & 32 \\\\\n",
+      "0.150000 & 0.052861 & 0.062872 & 32 \\\\\n",
+      "0.200000 & 0.057110 & 0.066208 & 30 \\\\\n",
+      "0.400000 & 0.057197 & 0.068399 & 49 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
@@ -54,9 +54,9 @@
       "\\toprule\n",
       "max\\_sequence\\_length & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
       "\\midrule\n",
-      "100.000000 & 0.041641 & 0.120815 & 29 \\\\\n",
-      "200.000000 & 0.053666 & 0.153795 & 29 \\\\\n",
-      "NaN & 0.057627 & 0.165562 & 39 \\\\\n",
+      "100.000000 & 0.049173 & 0.060140 & 43 \\\\\n",
+      "200.000000 & 0.052861 & 0.062872 & 32 \\\\\n",
+      "NaN & 0.054840 & 0.065045 & 41 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
@@ -64,9 +64,9 @@
       "\\toprule\n",
       "num\\_hidden\\_layers & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
       "\\midrule\n",
-      "2 & 0.050259 & 0.146503 & 29 \\\\\n",
-      "4 & 0.051603 & 0.149486 & 35 \\\\\n",
-      "8 & 0.046355 & 0.131256 & 35 \\\\\n",
+      "2 & 0.053056 & 0.062899 & 29 \\\\\n",
+      "4 & 0.052861 & 0.062872 & 32 \\\\\n",
+      "8 & 0.046597 & 0.058668 & 57 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n",
@@ -74,8 +74,8 @@
       "\\toprule\n",
       "pad\\_length & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
       "\\midrule\n",
-      "20 & 0.057141 & 0.162744 & 50 \\\\\n",
-      "50 & 0.051507 & 0.147829 & 31 \\\\\n",
+      "20 & 0.039365 & 0.050097 & 41 \\\\\n",
+      "50 & 0.049827 & 0.059477 & 36 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -109,19 +109,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aa2d329d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "DataFrame.sort_values() got an unexpected keyword argument 'reversed'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m df = pd.read_csv(os.path.join(\u001b[33m\"\u001b[39m\u001b[33mresults\u001b[39m\u001b[33m\"\u001b[39m, grid_search_file))\n\u001b[32m      6\u001b[39m df = df[[*search_parameters, *metrics]]\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m df = \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43msort_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43mby\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtest_ndcg@10\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mreversed\u001b[39;49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(df.to_latex(escape=\u001b[38;5;28;01mTrue\u001b[39;00m, index=\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
-      "\u001b[31mTypeError\u001b[39m: DataFrame.sort_values() got an unexpected keyword argument 'reversed'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{rrrrrr}\n",
+      "\\toprule\n",
+      "pad\\_length & hidden\\_layer\\_size & learning\\_rate & test\\_ndcg@10 & test\\_recall@10 & used\\_epochs \\\\\n",
+      "\\midrule\n",
+      "50 & 256 & 0.000500 & 0.050443 & 0.059165 & 29 \\\\\n",
+      "50 & 256 & 0.005000 & 0.050285 & 0.059369 & 58 \\\\\n",
+      "50 & 128 & 0.001000 & 0.048963 & 0.058538 & 32 \\\\\n",
+      "50 & 128 & 0.000500 & 0.048347 & 0.057300 & 29 \\\\\n",
+      "50 & 256 & 0.001000 & 0.048196 & 0.057430 & 38 \\\\\n",
+      "50 & 128 & 0.005000 & 0.043647 & 0.053944 & 67 \\\\\n",
+      "20 & 128 & 0.001000 & 0.041422 & 0.051569 & 43 \\\\\n",
+      "20 & 256 & 0.000500 & 0.040565 & 0.050017 & 29 \\\\\n",
+      "20 & 256 & 0.001000 & 0.040169 & 0.050754 & 33 \\\\\n",
+      "20 & 128 & 0.000500 & 0.039936 & 0.048442 & 33 \\\\\n",
+      "20 & 256 & 0.005000 & 0.035651 & 0.046332 & 64 \\\\\n",
+      "20 & 128 & 0.005000 & 0.031858 & 0.042249 & 54 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
      ]
     }
    ],
